themes/bittersweet/design/custom.css
@font-face {
    font-family: 'Bitter';
    font-style: normal;
    font-weight: 400;
    src: local('Bitter-Regular'), url('http://themes.googleusercontent.com/static/fonts/bitter/v3/2PcBT6-VmYhQCus-O11S5-vvDin1pK8aKteLpeZ5c0A.woff') format('woff');
}

body,
.SiteTitle,
h1, h2, h3, h4, h5 {
    font-family: Bitter, 'lucida grande', 'Lucida Sans Unicode', tahoma, sans-serif;
}

a {
    color: #1D5689;
}

a:hover {
    color: #003467;
}

/** Custom Master View Stuff **/
#Frame > .Top {
    background: #000;
    padding: 0 20px;
    text-align: left;
    line-height: 2.4;
}

.TopMenu a {
    padding: 8px;
    font-size: 13px;
    font-weight: 400;
    color: #ddd;
}

.TopMenu a:hover {
    background: #333;
}

.Banner {
    position: relative;
    min-height: 98px;
    text-align: left;
    padding: 20px;
}

.SiteTitle {
    font-size: 40px;
    font-weight: bold;
    line-height: 100px;
}

.SiteTitle a {
    color: #000;
}

.Banner .Row {
    position: relative;
}

.AdSpace {
    position: absolute;
    top: 0;
    right: 0;
    height: 90px;
    line-height: 90px;
    width: 728px;
    background: #ddd;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset;
    border: 4px solid #eee;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    text-align: center;
    color: #777;
}

#Head {
    color: #000;
    box-shadow: inset 0 5px 5px 0 #EEE,
    inset 0 -5px 5px 0 #EEE;
    background: #F7F7F7;
    border: 1px solid #D0D0D0;
    border-width: 1px 0;
    padding: 0;
}

#Head .SiteMenu a {
    font-size: 13px;
    font-weight: 400;
    color: #777;
    padding: 15px 0;
    margin: 0 30px;
    display: inline-block;
}

#Head .SiteMenu a:first-child {
    margin-left: 0;
}

#Head .SiteMenu a:hover {
    color: #222;
}

#Head .SiteSearch {
    top: 12px;
    right: 0;
}

#Head .SiteSearch .InputBox {
    border: 1px solid #fff;
    box-shadow: inset 0 0 2px #aaa;
    font-size: 13px;
}

#Head .SiteSearch .Button {
    top: 6px;
}

.BreadcrumbsWrapper {
    font-size: 11px;
    border-bottom: 1px dotted #eee;
    padding: 6px 0;
    margin-bottom: 20px;
    color: #aaa;
}

.Breadcrumbs a {
    color: #777;
}

/** Vanilla Contents **/
.PageDescription {
    color: #888;
    margin: 8px;
}

.CategoryBox h2 {
    margin: 20px 8px 8px;
}

.CategoryBox h2 a {
    color: #aaa;
}

.HomepageTitle {
    margin: 0 8px;
}

.HomepageTitle .AdminCheck {
    padding: 0;
}

.Pager {
    font-size: 18px;
}

.ProfileOptions {
    font-weight: bold;
}

.DataTable td {
    border-style: dotted;
}

.DataList > .Item {
    border-style: dotted !important;
    padding: 12px 8px;
}

.DataList .Item .Item {
    border: none !important;
}

.DataList .Title,
.DataList .Title a {
    font-size: 18px;
    color: #333;
}

.DataList .Title {
    color: #777;
}

.Meta,
.MItem,
.MItem a {
    color: #ccc;
}

.DataList .Title a:hover {
    text-decoration: underline;
}

.MItem {
    margin: 0 8px;
    padding: 0;
}

.MItem:last-child {
    border: none;
}

/* Big Button */
.ButtonGroup .Button,
#Content input.Button,
.Button {
    background: #cc3300;
    background-image: linear-gradient(bottom, rgb(170, 17, 0) 25%, rgb(204, 51, 0) 63%);
    background-image: -o-linear-gradient(bottom, rgb(170, 17, 0) 25%, rgb(204, 51, 0) 63%);
    background-image: -moz-linear-gradient(bottom, rgb(170, 17, 0) 25%, rgb(204, 51, 0) 63%);
    background-image: -webkit-linear-gradient(bottom, rgb(170, 17, 0) 25%, rgb(204, 51, 0) 63%);
    background-image: -ms-linear-gradient(bottom, rgb(170, 17, 0) 25%, rgb(204, 51, 0) 63%);
    background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0.25, rgb(170, 17, 0)),
            color-stop(0.63, rgb(204, 51, 0))
    );
    text-shadow: 0 -1px 0 #880000;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
    border-color: #763407;
    color: #fff;
}

.ButtonGroup.Open .Button.Handle,
#Content input.Button:hover,
#Content input.Button:focus,
#Content input.Button:active,
.Button:hover,
.Button:focus,
.Button:active {
    color: #fff;
    border-color: #6f0b00;
}

.ButtonGroup.Open .Button.Handle,
#Content input.Button:focus,
#Content input.Button:active,
.Button:focus,
.Button:active {
    background: #aa1100;
    box-shadow: none;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
}

#Panel .BigButton {
    margin: 20px 0;
}

input.Button {
    padding: 6px 12px;
}

.BoxFilter {
    margin: 20px 0;
}

.Box {
    color: #888;
    margin: 0 0 30px;
}

.Box h4 {
    color: #333;
    font-size: 18px;
    text-transform: uppercase;
    margin: 6px 0;
}

.PanelInfo li {
    font-weight: bold;
    background: #f7f7f7;
    padding: 2px 4px;
    border-style: dotted !important;
}

.PanelInfo a {
    color: #555;
}

.PanelInfo a:hover {
    text-decoration: underline;
}

body.Profile .PanelInfo .Active,
.PanelInfo .Active {
    background: #fff;
}

.PanelInfo .Active a {
    color: #333;
}

.Bullet {
    color: #aaa;
}

